--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 scrapy
 argparse==1.2.1
 ipython==0.13
-lxml==3.0
+lxml>=3.0
+cssselect==0.7.1
 pymongo==2.3
 requests==0.14.1
 wsgiref==0.1.2
+git+https://github.com/bartdegoede/pdfquery.git
