Dockerize OOD API; Update README

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
+*.swp
 *.pyc
 *.pyo
 *.db
 .DS_Store
 .coverage
 app/static/bower_components
-onderwijsscrapers/onderwijsscrapers/local_settings.py
+log/*
