--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
 colander==1.0b1
-scrapy
-Sphinx
-sphinxcontrib-httpdomain
-rawes
-requests
-dateutils
-flask
-Flask-RESTful
-Flask-Cors==1.10.2
-xlrd
-twisted
-lxml
-w3lib
+Scrapy==0.24.4
+Sphinx==1.2.3
+sphinxcontrib-httpdomain==1.3.0
+rawes==0.5.5
+requests==2.4.3
+dateutils==0.6.6
+Flask==0.10.1
+Flask-RESTful==0.2.12
+Flask-Cors==1.10.3
+xlrd==0.9.3
+Twisted==14.0.2
+lxml==3.4.0
+w3lib==1.10.0
 cryptography
-uwsgi
-cssselect
-pyyaml
-elasticsearch
+uWSGI
+cssselect==0.9.1
+PyYAML==3.11
+elasticsearch==1.2.0
+click
